--- a/contatooh/package.json
+++ b/contatooh/package.json
@@ -10,11 +10,15 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.6.7",
+    "cookie-parser": "^1.3.4",
     "ejs": "^0.8.8",
     "express": "^4.8.8",
     "express-load": "^1.1.14",
+    "express-session": "^1.7.6",
     "method-override": "^2.1.3",
     "mongodb": "^1.4.35",
-    "mongoose": "^3.8.25"
+    "mongoose": "^3.8.25",
+    "passport": "^0.2.1",
+    "passport-github": "^0.1.5"
   }
 }
